--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "Debapriya Das",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "domhandler": "^3.0.0",
+    "htmlparser2": "^4.0.0",
     "request": "^2.88.0"
   }
 }
